# GHWeatherInsights

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: mirror-to-codeberg.yaml
src/: main.rs
