[package]
name = "gh_weather_insights"
version = "0.1.0"
authors = ["FredHappyface"]
edition = "2021"
description = "A Rust-based application that analyzes your GitHub commit history and correlates it with historical weather data. Gain valuable insights into your coding habits and how they relate to weather conditions. "
documentation = "https://github.com/FredHappyface/GHWeatherInsights/blob/main/README.md"
readme = "README.md"
homepage = "https://github.com/FredHappyface/GHWeatherInsights/"
repository = "https://github.com/FredHappyface/GHWeatherInsights/"
license = "MIT"
keywords = ["github", "weather", "insight"]
categories = ["command-line-utilities"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.37.0"
reqwest = {version= "0.12.2", features = ["blocking", "json"]}
serde_json = {version="1.0.115"}
tokio = { version = "1.37.0", features = ["full"] }
